--- a/Lesson3/Site.Master
+++ b/Lesson3/Site.Master
@@ -1,5 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Lesson3.Site" %>
-
+<%@ Register Src="~/User_Control/Navbar.ascx" TagName="Navbar" TagPrefix="bs3" %>
 <!DOCTYPE html>
 
 <html lang="en">
@@ -14,10 +14,11 @@
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/app.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
+        <bs3:Navbar runat="server"></bs3:Navbar>
     <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
